--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Witaj w mojej aplikacji!</h1>
-<p>Jeszcze Cię zaskoczy...</p>
-<p>jeerk ;)</p>
+<h1>Witaj! To moja pierwsza strona WWW</h1>
+<p>...utworzona w Ruby on Rails.</p>
+<p> jeerk ;)</p>
