--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,4 @@
 <%= link_to 'Strona główna', root_path %>
 <%= link_to 'O mnie', home_about_path %>
 <%= link_to 'Kontakt', home_contact_path %>
-<h1>Witaj! To moja pierwsza strona WWW</h1>
-<p>...utworzona w Ruby on Rails.</p>
-<p> jeerk ;)</p>
-
+<%= link_to 'FAQ', home_faq_path %>
