--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,3 @@
 <h1>O mnie...</h1>
-<p>jestem Jeerk i właśnie tworzę swoją pierwszą stronę w Ruby</p> 
+<p>jestem Jeerk i właśnie tworzę stronę testową w Ruby</p> 
+<p>;P</p> 
