--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,3 @@
-<h1>O mnie...</h1>
-<p>jestem Jeerk i właśnie tworzę stronę testową w Ruby</p> 
+<h1>Hello</h1>
+<p>To moja strona testowa w Ruby</p> 
 <p>;P</p> 
