--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Witaj! To moja pierwsza strona WWW</h1>
+<h1>HELLO! To moja pierwsza strona WWW</h1>
 <p>...utworzona w Ruby on Rails.</p>
 <p> jeerk ;)</p>
 
